tests/lit/yalang/syntax/errors/scope_var_shadows.ya
// RUN: @compiler --emit yair @file

func : function() : void {
    a : f32 = 13;

    {
      // CHECK: error: Identifier 'a' shadows a previously declared identifier
      a : i32 = 13;
    }
}
